# light-cut-imgZ

./: .gitignore  .prettierignore  FEATURES.md  README.md  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: index.html
e2e/: playwright.config.ts
e2e/tests/: crop.spec.ts  export.spec.ts  open-image.spec.ts  rotate.spec.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: adjustments.rs  exif.rs  export.rs  filters.rs  history.rs  inpaint.rs  menu.rs  mod.rs  open.rs  tabs.rs  transform.rs
src/components/: AboutDialog.tsx  AdjustmentsPanel.tsx  Canvas.tsx  CanvasResizeDialog.tsx  CropControls.tsx  CropOverlay.tsx  ExifPanel.tsx  ExportDialog.tsx  EyedropperControls.tsx  FiltersPanel.tsx  FlipControls.tsx  HistoryPanel.tsx  InpaintingControls.tsx  PrefsDialog.tsx  ResizeDialog.tsx  RotationControls.tsx  TabBar.tsx  Toolbar.tsx  ZoomSelect.tsx
src/hooks/: useCrop.ts  useImageEditor.ts
src/lib/: i18n.ts  locale.tsx  prefs.ts  recentFiles.ts  tauri.ts
src/test/: AdjustmentsPanel.test.tsx  Canvas.test.tsx  CropOverlay.test.tsx  ExportDialog.test.tsx  FiltersPanel.test.tsx  RotationControls.test.tsx  Toolbar.test.tsx
src/test/mocks/: tauri.ts
src/types/: index.ts
