[package]
name = "light-cut-imgz"
version = "0.4.1"
description = "Fast desktop image editor — crop, rotate, export"
authors = ["Sikander RAVATE"]
license = "MIT"
repository = "https://github.com/sindus/light-cut-imgZ"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "light_cut_imgz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = [
  "png",
  "jpeg",
  "webp",
  "bmp",
  "tiff",
  "rayon",
] }
imageproc = { version = "0.25", default-features = false }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
kamadak-exif = "0.5"
img-parts = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
